fixed issues and updated plugin

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>K8s Guardrails</title>
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="../popup/popup.css">
+  <script src="../lib/js-yaml.min.js"></script>
 </head>
 <body>
   <h3>Kubernetes Guardrails</h3>
