--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>K8s Guardrails</title>
-  <link rel="stylesheet" href="../popup/popup.css">
+  <meta charset="UTF-8" />
+  <title>Kubernetes Guardrail</title>
+  <link rel="stylesheet" href="popup.css">
+  <!-- Load UMD js-yaml so popup module can access globalThis.jsyaml -->
   <script src="../lib/js-yaml.min.js"></script>
 </head>
 <body>
-  <h3>Kubernetes Guardrails</h3>
-  <div id="results"></div>
-  <script type="module" src="popup.js"></script>
+  <h2>
+    🛡️ Guardrail Summary
+    <span id="statusBadge" class="status clean" style="display:none;">STATUS</span>
+  </h2>
+  <div id="bootStatus" style="font-size:12px;color:#666;margin-top:6px;">Initializing…</div>
+  <div style="display:flex;gap:8px;align-items:center;margin-top:6px;">
+    <button id="themeToggle" title="Toggle theme" class="copy secondary" style="padding:6px 10px;">🌙</button>
+    <div style="font-size:12px;color:#64748b;">Theme</div>
+  </div>
+  <div id="summary"></div>
+
+  <div id="manual" style="margin:8px 0;">
+    <label for="manualYaml" style="font-size:13px;display:block;margin-bottom:4px;">Paste YAML or use page selection:</label>
+    <textarea id="manualYaml" rows="6" style="width:100%;font-family:monospace;display:none;" placeholder="Paste Kubernetes YAML here..."></textarea>
+    <div style="margin-top:6px;">
+      <button id="useSelection" class="copy" style="margin-right:6px;">Use Selection</button>
+      <button id="validateManual" class="copy">Validate</button>
+    </div>
+  </div>
+
+  <table id="resultsTable" style="display:none;">
+    <thead>
+      <tr><th>Severity</th><th>Rule</th><th>Message</th></tr>
+    </thead>
+    <tbody id="resultsBody"></tbody>
+  </table>
+
+  <div id="noYaml" style="display:none;">No Kubernetes YAML detected on this page.</div>
+
+  <button id="copyReport" class="copy" style="display:none;">📋 Copy Report</button>
+
+  <script src="popup.js" type="module"></script>
 </body>
 </html>
