--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,6 +17,7 @@
     <button id="themeToggle" title="Toggle theme" class="copy secondary" style="padding:6px 10px;">🌙</button>
     <div style="font-size:12px;color:#64748b;">Theme</div>
   </div>
+  <div id="fetchedNotice" style="margin-top:8px;font-size:13px;color:#064e3b;display:none;"></div>
   <div id="summary"></div>
 
   <div id="manual" style="margin:8px 0;">
