refactor(options): extract Kyverno preview, tidy options; fix rulesEngine exports and tests

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,6 +8,7 @@
   <script src="../lib/js-yaml.min.js"></script>
 </head>
 <body>
+  <div id="container">
   <h2>
   🛡️ Guardon Summary
     <span id="statusBadge" class="status clean" style="display:none;">STATUS</span>
@@ -69,5 +70,6 @@
   </div>
 
   <script src="popup.js" type="module"></script>
+  </div>
 </body>
 </html>
