fixing functionality lost in unit test fixes

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -120,7 +120,7 @@
       </div>
     </div>
   </div>
-  <script src="options.js"></script>
+  <script type="module" src="options.js"></script>
   <!-- Toast notification -->
   <div id="toast" style="position:fixed;right:20px;bottom:20px;z-index:9999;display:none;padding:10px 14px;border-radius:8px;background:#111;color:#fff;box-shadow:0 6px 18px rgba(2,6,23,0.2);font-size:13px;"></div>
 </body>
